--- a/html/modulus.html
+++ b/html/modulus.html
@@ -170,11 +170,9 @@ console.log("13" % "5")</pre><!-- code-content -->
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-3 
-</pre><!-- small-view -->
+3 </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-3 
-</pre><!-- wide-view -->
+3 </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
@@ -218,11 +216,9 @@ console.log(-13 % 5)</pre><!-- code-content -->
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
--3 
-</pre><!-- small-view -->
+-3 </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
--3 
-</pre><!-- wide-view -->
+-3 </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
