fix pre tag (missing anglebracket) in division_assignment.html

--- a/html/division_assignment.html
+++ b/html/division_assignment.html
@@ -95,7 +95,7 @@ console.log(x /= 5)</pre><!-- code-content -->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
 let y = "hello"
-console.log(y /= " world")/pre><!-- code-content -->
+console.log(y /= " world")</pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
