populate indentation.html

--- a/html/indentation.html
+++ b/html/indentation.html
@@ -58,54 +58,14 @@
             <main>
                 <article>
                     <h1 class="count">Introduction</h1>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, suscipit odio? Obcaecati
-                        repellendus nesciunt adipisci ratione ducimus dolorem ipsa dolores?
-                    </p>
-                </article>
+                    <ol>
+                        <li>
+                            Indentation is option but it is highly recommended as it makes the code easier to read and
+                            understand
 
-                <article>
-                    <h1 class="count">Code Example</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores culpa quasi doloremque, ab
-                        iusto
-                        totam cupiditate. Mollitia voluptatem assumenda voluptatibus?
-                    </p>
-
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-
-#include &lt;stdio.h&gt;
-        
-int main()
-  {
-    printf("Hello world\n");
-  }</pre><!-- code-content -->
-                    </details><!--details CODE-->
-
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-
-clang helloworld.c -o 
-    zhelloworld.o
-
-./helloworld.o
-
-// Hello world
-                            </pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-
-clang helloworld.c -o helloworld.o
-
-./helloworld.o
-
-// Hello world
-                            </pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
+                        <li>
+                            The usual convention is to indent (consistently) either by two spaces or by four
+                    </ol>
                 </article>
 
                 <article>
@@ -148,10 +108,6 @@ INSERT CONSOLE OUTPUT (wide view)
                     <details open><!-- Details REFS -->
                         <summary class="details-refs-summary">[JavaScript Inserts]</summary>
                         <div class="ref-container details-refs-aclass">
-                            <div class="ref">
-                                <a href="https://www.google.ie">Google</a>
-                            </div>
-
                             <div class="ref">
                                 <a href="https://www.google.ie">Google</a>
                             </div>
