add comment example (inter-line comment) to comments.html

--- a/html/comments.html
+++ b/html/comments.html
@@ -184,6 +184,45 @@ comments do not print </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+console/* logg */.log("%s do not print", 
+    "comments")
+
+console.log("In %s,%s selects the whole word", 
+    "Visual Studio Code", 
+    "Cmd-d");
+
+console.log("In %s, %s comments out that word", 
+    "Visual Studio Code", 
+    "Shift-Option-A")
+
+  </pre><!-- code-content -->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+comments do not print
+In Visual Studio Code,Cmd-d selects the whole word
+In Visual Studio Code, Shift-Option-A comments out that word
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+comments do not print
+In Visual Studio Code,Cmd-d selects the whole word
+In Visual Studio Code, Shift-Option-A comments out that word
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
                 <!-- here -->
 
                 <article>
